[tool.poetry]
name = "hw-8"
version = "0.1.0"
description = ""
authors = ["Alona7777 <abogolepova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.2"
mongoengine = "^0.27.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"
certifi = "^2024.2.2"
pika = "^1.3.2"
faker = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
